--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <section id="container">
         <object>
-            <img class="shape1" src="img/shape1.png">
-            <img class="shape2" src="img/shape2.png">
+            <img class="shape1" src="./img/shape1.png">
+            <img class="shape2" src="./img/shape2.png">
         </object>
         <header id="header">
             <a id="brand" href="#">
-                <img src="img/brand.png" alt="Logo da Marca" />
+                <img src="./img/brand.png" alt="Logo da Marca" />
             </a>
             <nav id="navigation">
                 <ul>
@@ -30,10 +30,10 @@
                 </ul>
             </nav>
             <div class="menu-toggle">
-                <img src="img/menu.png" alt="menu">
+                <img src="./img/menu.png" alt="menu">
             </div>
-            <button id="btn-sacola" class="button">Sacola<img src="/img/shopping-cart.png" alt="Sacola"></button>
-            <button id="btn-login" class="button">Login<img src="/img/user.png" alt="Login"></button>
+            <button id="btn-sacola" class="button">Sacola<img src="./img/shopping-cart.png" alt="Sacola"></button>
+            <button id="btn-login" class="button">Login<img src="./img/user.png" alt="Login"></button>
         </header>
         <article id="article">
             <span>B3</span>
@@ -41,16 +41,16 @@
             <h2>Você irá se surpeender com a qualidade de som desse fone sem fio. Viaje em altos graves e agudos em suas
                 músicas ou vídeos.</h2>
             <div class="send">
-                <i><img src="img/envelope.png" alt="Ícone"></i>
+                <i><img src="./img/envelope.png" alt="Ícone"></i>
                 <input type="text" id="input" placeholder="Escreva seu E-Mail" />
                 <a href="#openModal"><button id="btn-send">Enviar</button></a>
             </div>
         </article>
         <picture id="picture">
-            <img src="/img/phone.png" alt="Ilustração do fone">
+            <img src="./img/phone.png" alt="Ilustração do fone">
         </picture>
         <footer id="footer">
-            <small>&copy; Desenvolvimento Front-Endf</small>
+            <small>&copy; Desenvolvimento Front-End</small>
         </footer>
     </section>
 
@@ -58,8 +58,8 @@
         <div class="body-modal">
             <a href="#close" title="Fechar" class="closeModal"></a>
             <div class="side-left">
-                <img src="img/phone.png" class="phone-msg" />
-                <i><img src="img/envelope.png" alt="icone" /></i>
+                <img src="./img/phone.png" class="phone-msg" />
+                <i><img src="./img/envelope.png" alt="icone" /></i>
                 <h1>Mensagem Enviada</h1>
             </div>
             <div class="side-right">
